# ts

./: CMakeLists.txt  main.cpp
include/: column.h  data_type.h  enum_parser.h  errors.h  file.h  parse.h  time_series.h  time_series_reader.h  ts_file_definition.h
src/: file.cpp  file_basic.cpp  time_series_reader.cpp
test/: test.cpp
